--- a/_config.yml
+++ b/_config.yml
@@ -258,7 +258,7 @@ compress_html:
 
 # Defaults
 defaults:
-   _posts
+ #  _posts
   - scope:
       path: ""
       type: posts
@@ -270,7 +270,7 @@ defaults:
       share: true
       related: true
 
- _pages
+ # _pages
   - scope:
       path: ""
       type: pages
