--- a/_config.yml
+++ b/_config.yml
@@ -10,8 +10,7 @@
 # Review documentation to determine if you should use `theme` or `remote_theme`
 # https://mmistakes.github.io/minimal-mistakes/docs/quick-start-guide/#installing-the-theme
 
-#theme                    : "minimal-mistakes-jekyll"
- remote_theme           : "poole/hyde"
+theme                    : "minimal-mistakes-jekyll"
 minimal_mistakes_skin    : "air" # "mint", "aqua", "contrast", "dark", "dirt", "neon", "mint", "plum", "sunrise"
 
 # Site Settings
